--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,24 @@ body {
     z-index: 1000;
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
+/* .hidden {
+    display: none !important;
+    visibility: hidden;
+    opacity: 0;
+} */
+
+.btn--close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 2rem;
+    background: transparent;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
 /* Message Styles */
 .message {
     display: flex;
